--- a/task-app/src/index.css
+++ b/task-app/src/index.css
@@ -38,3 +38,18 @@ body{
   font-size: 15px;
   font-family: inherit;
 }
+.task{
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.task.reminder{
+  border-left: 5px solid green;
+}
+.task h3{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
